--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ java {
 
 configurations {
 	compileOnly {
-		extendsFrom(configurations.annotationProcessor.get())
+		extendsFrom(configurations.annotationProcessor)
 	}
 }
 
@@ -23,39 +23,67 @@ repositories {
 	mavenCentral()
 }
 
-dependencies {
-	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-	implementation("org.springframework.boot:spring-boot-starter-web")
-	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0")
-	implementation("org.springframework.boot:spring-boot-starter-data-redis")
-	implementation("com.querydsl:querydsl-jpa:5.0.0:jakarta")
-
-	compileOnly("org.projectlombok:lombok")
-	annotationProcessor("org.projectlombok:lombok")
-	annotationProcessor("com.querydsl:querydsl-apt:5.0.0:jakarta")
-	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
-	annotationProcessor("jakarta.persistence:jakarta.persistence-api")
-
-	runtimeOnly("com.mysql:mysql-connector-j")
-
-	testImplementation("org.springframework.boot:spring-boot-starter-test")
+// 버전 변수 설정
+ext {
+	springBootVersion = "3.4.0"
+	querydslVersion = "5.0.0"
+	springdocVersion = "3.0.0"
+	lombokVersion = "1.18.28"
 }
 
-tasks.withType<Test> {
+dependencies {
+	// Spring Boot
+	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+	implementation "org.springframework.boot:spring-boot-starter-web"
+	implementation "org.springframework.boot:spring-boot-starter-data-redis"
+	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
+
+	// QueryDSL
+	implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
+	// Lombok
+	compileOnly "org.projectlombok:lombok:${lombokVersion}"
+	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+
+	// MySQL
+	runtimeOnly "com.mysql:mysql-connector-j"
+
+	// Test
+	testImplementation "org.springframework.boot:spring-boot-starter-test"
+
+	annotationProcessor(
+			"com.querydsl:querydsl-apt:5.0.0:jakarta",
+			"jakarta.annotation:jakarta.annotation-api",
+			"jakarta.persistence:jakarta.persistence-api"
+	)
+
+	//s3
+	implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.1'
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.767'
+
+	// swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+}
+
+tasks.named('test') {
 	useJUnitPlatform()
 }
 
-// Querydsl 설정
-def generated = 'src/main/generated'
+sourceSets {
+	main {
+		java {
+			srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
+		}
+	}
+}
+
+// QueryDSL 설정
+def querydslSrcDir = 'src/main/generated'
 
 tasks.withType(JavaCompile) {
-	options.annotationProcessorGeneratedSourcesDirectory = file(generated)
+	options.generatedSourceOutputDirectory = file(querydslSrcDir)
 }
 
-sourceSets {
-	main.java.srcDirs += [generated]
-}
 
 clean {
-	delete file(generated)
+	delete file(querydslSrcDir)
 }
