--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 HELP.md
-#.gradle
-#build/
-#!gradle/wrapper/gradle-wrapper.jar
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+h2/
+src/main/resources/application.yaml
 
 ### STS ###
 .apt_generated
