--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,14 @@ repositories {
 	mavenCentral()
 }
 
+// 버전 변수 설정
+ext {
+	springBootVersion = "3.4.0"
+	querydslVersion = "5.0.0"
+	springdocVersion = "3.0.0"
+	lombokVersion = "1.18.28"
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -29,6 +37,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
+
+	// QueryDSL
+	implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
 	annotationProcessor(
 			"com.querydsl:querydsl-apt:5.0.0:jakarta",
 			"jakarta.annotation:jakarta.annotation-api",
@@ -43,4 +55,24 @@ dependencies {
 
 tasks.withType(Test) {
 	useJUnitPlatform()
+}
+
+sourceSets {
+	main {
+		java {
+			srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
+		}
+	}
+}
+
+// QueryDSL 설정
+def querydslSrcDir = 'src/main/generated'
+
+tasks.withType(JavaCompile) {
+	options.generatedSourceOutputDirectory = file(querydslSrcDir)
+}
+
+
+clean {
+	delete file(querydslSrcDir)
 }
