--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,34 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-	implementation 'org.springframework:spring-messaging:5.3.27'
+	implementation 'org.springframework:spring-messaging'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+
+	// Spring Security 추가
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	//swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+	implementation 'org.hibernate.validator:hibernate-validator:7.0.2.Final' // 버전은 최신 버전으로 대체하세요
+
 	compileOnly 'org.projectlombok:lombok'
+
+	// JWT
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+
+	//aws
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	// MySQL
 	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	//H2
+	runtimeOnly 'com.h2database:h2'
+
+	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -34,3 +57,9 @@ dependencies {
 tasks.withType(Test) {
 	useJUnitPlatform()
 }
+
+bootJar {
+	mainClass = 'com.app.TreenApplication'
+}
+
+
