--- a/build.gradle
+++ b/build.gradle
@@ -26,21 +26,31 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// 채팅
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'org.springframework:spring-messaging'
+	implementation 'org.springframework.security:spring-security-messaging:6.0.2'
+	implementation 'org.webjars:sockjs-client:1.5.1'
+	implementation 'org.webjars:stomp-websocket:2.3.4'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	// Redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	//mongoDB JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 
-	// Spring Security 추가
+	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	//swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 	implementation 'org.hibernate.validator:hibernate-validator:7.0.2.Final' // 버전은 최신 버전으로 대체하세요
 
+	// lombok
 	compileOnly 'org.projectlombok:lombok'
 
 	// JWT
@@ -49,7 +59,7 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
 	//aws
-	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:3.0.0'
 
 	// MySQL
 	runtimeOnly 'com.mysql:mysql-connector-j'
