--- a/build.gradle
+++ b/build.gradle
@@ -26,21 +26,37 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-	implementation 'org.springframework:spring-messaging:5.3.27'
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
 
+	// 채팅
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework:spring-messaging'
+	implementation 'org.springframework.security:spring-security-messaging:6.0.2'
+	implementation 'org.webjars:sockjs-client:1.5.1'
+	implementation 'org.webjars:stomp-websocket:2.3.4'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	//mongoDB JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+
+	// Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	// JWT
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+
+	// MySQL
+//	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	//H2
+	runtimeOnly 'com.h2database:h2'
 	// QueryDSL
 	implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
 	annotationProcessor(
@@ -49,19 +65,14 @@ dependencies {
 			"jakarta.persistence:jakarta.persistence-api"
 	)
 
-	// jwt
-	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
-	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
-	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
 	//s3
-	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.767'
 	implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.1'
-	// swagger
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+	implementation 'software.amazon.awssdk:s3:2.20.40'
 
-	// h2
-	runtimeOnly 'com.h2database:h2'
+	// swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+
 
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
