--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,15 +13,15 @@ spring:
     username: sa      # 기본 사용자명
     password:
   jpa:
-    hibernate.ddl-auto: create
+    hibernate.ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
   data:
     mongodb:
-      uri: ${MONGO_DB_URL}
-      database: treen_dev
+      uri: ${MONGO_DB_URI}
+      database: ${MONGO_DB_DATABASE}
 #    database-platform: org.hibernate.dialect.MySQL8Dialect
 cloud:
   aws:
