--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,22 @@
 spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DB_URL:jdbc:mysql://localhost:3306/treen}
-    username: ${DB_USERNAME:root}
-    password: ${DB_PASSWORD:password}
+  thymeleaf:
+    suffix: .html
+    cache: false
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: ${DB_URL:jdbc:mysql://localhost:3306/treen}
+#    username: ${DB_USERNAME:root}
+#    password: ${DB_PASSWORD:password}
   redis:
     host: localhost
     port: 6379
   config:
     import: optional:file:.env[.properties]  # .env 파일을 직접 로드
-#  datasource:
-#    driver-class-name: org.h2.Driver  # H2 드라이버 사용
-#    url: jdbc:h2:tcp://localhost/~/test  # 인메모리 H2 DB 사용 (테스트용)
-#    username: sa      # 기본 사용자명
-#    password:
+  datasource:
+    driver-class-name: org.h2.Driver  # H2 드라이버 사용
+    url: jdbc:h2:tcp://localhost/~/test  # 인메모리 H2 DB 사용 (테스트용)
+    username: sa      # 기본 사용자명
+    password:
   jpa:
     hibernate.ddl-auto: update
     show-sql: true
@@ -40,6 +43,24 @@ cloud:
     region:
       static: ${AWS_REGION:ap-northeast-2}
       auto: false
+auth:
+  kakao:
+    token-request-uri: ${TOKEN_REQUEST_URI}
+    member-info-request-uri: ${MEMBER_INFO_REQUEST_URI}
+    redirect-uri: ${REDIRECT_URI}
+    client-id: ${CLIENT_ID}
+  google:
+    token-request-uri: ${GOOGLE_TOKEN_REQUEST_URI}
+    member-info-request-uri: ${GOOGLE_MEMBER_INFO_REQUEST_URI}
+    redirect-uri: ${GOOGLE_REDIRECT_URI}
+    client-id: ${GOOGLE_CLIENT_ID}
+    client-secret: ${GOOGLE_CLIENT_SECRET}
+  naver:
+    token-request-uri: ${NAVER_TOKEN_REQUEST_URI}
+    member-info-request-uri: ${NAVER_MEMBER_INFO_REQUEST_URI}
+    redirect-uri: ${NAVER_REDIRECT_URI}
+    client-id: ${NAVER_CLIENT_ID}
+    client-secret: ${NAVER_CLIENT_SECRET}
 jwt:
   secret:
     key: ${JWT_SECRET_KEY}
