--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,11 @@ dependencies {
 	implementation 'org.webjars:stomp-websocket:2.3.4'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
+	// Kafka 의존성 추가
+	implementation "org.springframework.kafka:spring-kafka"
+
 	//mongoDB JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 
 	// Spring Security
