--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
+tasks.named('jar') {
+	enabled = false
+}
+
 tasks.withType(Test) {
 	useJUnitPlatform()
 }
