--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 HELP.md
-.gradle
+.gradle/
+gradle/
+gradlew.bat
+gradlew
+.github/
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
@@ -41,3 +45,4 @@ out/
 
 ### VS Code ###
 .vscode/
+.DS_Store
