[CICD] Jenkins 파이프라인 구성, deploy.sh 설정

--- a/build.gradle
+++ b/build.gradle
@@ -55,13 +55,13 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
 	// MySQL
-//	runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 
 	// coolsms
 	implementation 'net.nurigo:sdk:4.3.0'
 
 	//H2
-	runtimeOnly 'com.h2database:h2'
+	//runtimeOnly 'com.h2database:h2'
 	// QueryDSL
 	implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
 	annotationProcessor(
