--- a/docker/docker-compose.blue.yml
+++ b/docker/docker-compose.blue.yml
@@ -1,5 +1,12 @@
 version: '3'
 services:
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - servernetwork
   backend:
     # 현재 디렉토리에서의 Dockerfile을 사용하여 Docker 이미지를 빌드
     build: .
@@ -10,6 +17,8 @@ services:
     container_name: spring-treen-blue
     environment:
       - TZ=Asia/Seoul
+      - SPRING_REDIS_HOST=redis
+      - SPRING_REDIS_PORT=6379
     networks:
       - servernetwork
 
