--- a/docker/docker-compose.green.yml
+++ b/docker/docker-compose.green.yml
@@ -1,5 +1,12 @@
 version: '3'
 services:
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - servernetwork
   backend:
     build: .
     ports:
@@ -7,6 +14,8 @@ services:
     container_name: spring-treen-green
     environment:
       - TZ=Asia/Seoul
+      - SPRING_REDIS_HOST=redis
+      - SPRING_REDIS_PORT=6379
     networks:
       - servernetwork
 
