[DEPLOY] redis 컨테이너 실행 순서 제어

--- a/docker/docker-compose.green.yml
+++ b/docker/docker-compose.green.yml
@@ -18,6 +18,8 @@ services:
       - SPRING_REDIS_PORT=6379
     networks:
       - servernetwork
+    depends_on:
+      - redis
 
 networks:
   servernetwork:
