--- a/docker/docker-compose.blue.yml
+++ b/docker/docker-compose.blue.yml
@@ -21,6 +21,8 @@ services:
       - SPRING_REDIS_PORT=6379
     networks:
       - servernetwork
+    depends_on:
+      - redis
 
 networks:
   servernetwork:
